first part of exercise 3

--- a/report/contents.tex
+++ b/report/contents.tex
@@ -34,17 +34,17 @@ adaptation.
     \centering
     \begin{subfigure}[t]{0.30\columnwidth}
         \centering
-        \includegraphics[width=\columnwidth]{figures/pdf/ex1_l1_n5_mu90.pdf}
+        \includegraphics[width=\columnwidth]{pdf/ex1_l1_n5_mu90.pdf}
         \caption{}
     \end{subfigure} \hfill
     \begin{subfigure}[t]{0.30\columnwidth}
         \centering
-        \includegraphics[width=\columnwidth]{figures/pdf/ex1_l1_n5_mu60.pdf}
+        \includegraphics[width=\columnwidth]{pdf/ex1_l1_n5_mu60.pdf}
         \caption{}
     \end{subfigure} \hfill
     \begin{subfigure}[t]{0.30\columnwidth}
         \centering
-        \includegraphics[width=\columnwidth]{figures/pdf/ex1_l1_n5_mu30.pdf}
+        \includegraphics[width=\columnwidth]{pdf/ex1_l1_n5_mu30.pdf}
         \caption{}
     \end{subfigure}
     \caption{Results for the first signal of exercise 1: varying adaptation
@@ -65,17 +65,17 @@ regard to the filter order. Figure~\ref{fig:ex1varyorder} shows this.
     \centering
     \begin{subfigure}[t]{0.30\columnwidth}
         \centering
-        \includegraphics[width=\columnwidth]{figures/pdf/ex1_l1_n3_mu60.pdf}
+        \includegraphics[width=\columnwidth]{pdf/ex1_l1_n3_mu60.pdf}
         \caption{}
     \end{subfigure} \hfill
     \begin{subfigure}[t]{0.30\columnwidth}
         \centering
-        \includegraphics[width=\columnwidth]{figures/pdf/ex1_l1_n5_mu60.pdf}
+        \includegraphics[width=\columnwidth]{pdf/ex1_l1_n5_mu60.pdf}
         \caption{}
     \end{subfigure} \hfill
     \begin{subfigure}[t]{0.30\columnwidth}
         \centering
-        \includegraphics[width=\columnwidth]{figures/pdf/ex1_l1_n10_mu60.pdf}
+        \includegraphics[width=\columnwidth]{pdf/ex1_l1_n10_mu60.pdf}
         \caption{}
     \end{subfigure}
     \caption{Results for the first signal of exercise 1: varying filter
@@ -97,22 +97,22 @@ becomes more important in the other regions.
     \centering
     \begin{subfigure}[t]{0.30\columnwidth}
         \centering
-        \includegraphics[width=\columnwidth]{figures/pdf/ex1_l2_n3_mu90.pdf}
+        \includegraphics[width=\columnwidth]{pdf/ex1_l2_n3_mu90.pdf}
         \caption{\label{fig:ex1sig2switch}}
     \end{subfigure} % \hspace{1cm}
     \begin{subfigure}[t]{0.30\columnwidth}
         \centering
-        \includegraphics[width=\columnwidth]{figures/pdf/ex1_l2_n3_mu60.pdf}
+        \includegraphics[width=\columnwidth]{pdf/ex1_l2_n3_mu60.pdf}
         \caption{}
     \end{subfigure} \\
     \begin{subfigure}[t]{0.30\columnwidth}
         \centering
-        \includegraphics[width=\columnwidth]{figures/pdf/ex1_l2_n5_mu90.pdf}
+        \includegraphics[width=\columnwidth]{pdf/ex1_l2_n5_mu90.pdf}
         \caption{}
     \end{subfigure} % \hspace{1cm}
     \begin{subfigure}[t]{0.30\columnwidth}
         \centering
-        \includegraphics[width=\columnwidth]{figures/pdf/ex1_l2_n5_mu60.pdf}
+        \includegraphics[width=\columnwidth]{pdf/ex1_l2_n5_mu60.pdf}
         \caption{}
     \end{subfigure}
     \caption{Results for the second signal of exercise 1.\label{fig:ex1sig2}}
@@ -124,47 +124,47 @@ Figure~\ref{fig:ex1vsig3} depicts the results for this exercise.
     \centering
     \begin{subfigure}[t]{0.30\columnwidth}
         \centering
-        \includegraphics[width=\columnwidth]{figures/pdf/ex1_l3_n3_mu90.pdf}
+        \includegraphics[width=\columnwidth]{pdf/ex1_l3_n3_mu90.pdf}
         \caption{}
     \end{subfigure} \hfill
     \begin{subfigure}[t]{0.30\columnwidth}
         \centering
-        \includegraphics[width=\columnwidth]{figures/pdf/ex1_l3_n3_mu60.pdf}
+        \includegraphics[width=\columnwidth]{pdf/ex1_l3_n3_mu60.pdf}
         \caption{}
     \end{subfigure} \hfill
     \begin{subfigure}[t]{0.30\columnwidth}
         \centering
-        \includegraphics[width=\columnwidth]{figures/pdf/ex1_l3_n3_mu30.pdf}
+        \includegraphics[width=\columnwidth]{pdf/ex1_l3_n3_mu30.pdf}
         \caption{}
     \end{subfigure} \\
     \begin{subfigure}[t]{0.30\columnwidth}
         \centering
-        \includegraphics[width=\columnwidth]{figures/pdf/ex1_l3_n5_mu90.pdf}
+        \includegraphics[width=\columnwidth]{pdf/ex1_l3_n5_mu90.pdf}
         \caption{}
     \end{subfigure} \hfill
     \begin{subfigure}[t]{0.30\columnwidth}
         \centering
-        \includegraphics[width=\columnwidth]{figures/pdf/ex1_l3_n5_mu60.pdf}
+        \includegraphics[width=\columnwidth]{pdf/ex1_l3_n5_mu60.pdf}
         \caption{}
     \end{subfigure} \hfill
     \begin{subfigure}[t]{0.30\columnwidth}
         \centering
-        \includegraphics[width=\columnwidth]{figures/pdf/ex1_l3_n5_mu30.pdf}
+        \includegraphics[width=\columnwidth]{pdf/ex1_l3_n5_mu30.pdf}
         \caption{}
     \end{subfigure} \\
     \begin{subfigure}[t]{0.30\columnwidth}
         \centering
-        \includegraphics[width=\columnwidth]{figures/pdf/ex1_l3_n10_mu90.pdf}
+        \includegraphics[width=\columnwidth]{pdf/ex1_l3_n10_mu90.pdf}
         \caption{}
     \end{subfigure} \hfill
     \begin{subfigure}[t]{0.30\columnwidth}
         \centering
-        \includegraphics[width=\columnwidth]{figures/pdf/ex1_l3_n10_mu60.pdf}
+        \includegraphics[width=\columnwidth]{pdf/ex1_l3_n10_mu60.pdf}
         \caption{}
     \end{subfigure} \hfill
     \begin{subfigure}[t]{0.30\columnwidth}
         \centering
-        \includegraphics[width=\columnwidth]{figures/pdf/ex1_l3_n10_mu30.pdf}
+        \includegraphics[width=\columnwidth]{pdf/ex1_l3_n10_mu30.pdf}
         \caption{\label{fig:ex1vsig3n10mu3}}
     \end{subfigure}
     \caption{Results for the third signal of exercise . The black dashed lines on
@@ -260,14 +260,14 @@ for this can be seen in figures~\ref{fig:ex22x1} and~\ref{fig:ex22x2}.
     \centering
     \begin{minipage}[t]{0.30\columnwidth}
         \centering
-        \includegraphics[width=\columnwidth]{figures/pdf/ex2_pt2_x1_all.pdf}
+        \includegraphics[width=\columnwidth]{pdf/ex2_pt2_x1_all.pdf}
         \caption{Results for the second part of ex. 2 for \(x_1(t)\)
             \label{fig:ex22x1}}
     \end{minipage}
     \hspace{1cm}
     \begin{minipage}[t]{0.30\columnwidth}
         \centering
-        \includegraphics[width=\columnwidth]{figures/pdf/ex2_pt2_x2_all.pdf}
+        \includegraphics[width=\columnwidth]{pdf/ex2_pt2_x2_all.pdf}
         \caption{Results for the second part of ex. 2 for \(x_2(t)\)
             \label{fig:ex22x2}}
     \end{minipage}
@@ -285,3 +285,27 @@ limitations of floating point arithmetic.
 % inner circle, we have a system that is stable, but is anti-causal. On the other
 % hand, if we choose as the ROC the external region of the Z-plane the system
 % becomes causal, but at the cost of stability.
+
+\FloatBarrier
+\section{Exercise 2}
+
+In exercise 3, we are asked to use the NMLS algorithm to make an adaptive filter
+that works with the previous signals. For this, I sidestepped a bit from script.
+The number of iterations and the step were both too low to see the best converge
+possible. The same with the number of weights. I settled on two million
+iterations, with \(\mu=0.1\) and \(40\) weights. Results can be seen in
+figure~\ref{fig:ex3res}.
+\begin{figure}
+    \centering
+    \begin{subfigure}[t]{0.30\columnwidth}
+        \centering
+        \includegraphics[width=\columnwidth]{pdf/ex3_x1_all.pdf}
+        \caption{Results for \(x_1\).}
+    \end{subfigure} \hspace{1cm}
+    \begin{subfigure}[t]{0.30\columnwidth}
+        \centering
+        \includegraphics[width=\columnwidth]{pdf/ex3_x2_all.pdf}
+        \caption{Results for \(x_2\).}
+    \end{subfigure}
+    \caption{Results for the exercise 3.\label{fig:ex3res}}
+\end{figure}
