--- a/report/main.tex
+++ b/report/main.tex
@@ -20,6 +20,10 @@
 % Config listings
 \lstset{language=Matlab,basicstyle=\ttfamily,keywordstyle={\color{blue}}}
 
+\makeatletter
+\setlength{\@fptop}{0pt}
+\makeatother
+
 \begin{document}
 
 % Write the document in contents.tex
