--- a/report/contents.tex
+++ b/report/contents.tex
@@ -1,10 +1,11 @@
 % Contents\
 \begin{abstract}
-    Some abstract
+    In this work, I explore the exercises on the final assignment of Signal
+    Processing: Principles and Applications. The work centres around adaptive
+    filter and the normalized least mean squares algorithm.
 \end{abstract}
 
-
-\section{Exercise 1}\FloatBarrier
+\section{Exercise 1}
 
 In this exercise, and for each of the three signals in study, I decided to test
 three different filter orders (\(n\)), with three different adaptation steps
@@ -18,7 +19,7 @@ three different filter orders (\(n\)), with three different adaptation steps
 
 The experiment is done by script {\tt experiment1.m} and supported by the function
     {\tt do\_nlms.m}. Furthermore, plotting is handled by the Python script {\tt
-    makeplots\_1.py}.
+        makeplots\_1.py}.
 
 There is a lot to unpack here, so let's get started. The first signal a sequence
 of random numbers that is filtered and to which is added some white noise
@@ -30,19 +31,19 @@ This filter has one pole and one zero. Figure~\ref{fig:ex1varystep} shows how th
 adaptation evolves in regarding to the adaptation step. Keep in mind that, as
 asked, the adaptation step goes down by a factor of 10 in the middle of the
 adaptation.
-\begin{figure}[h]
+\begin{figure}
     \centering
-    \begin{subfigure}[t]{0.30\columnwidth}
+    \begin{subfigure}[t]{0.32\columnwidth}
         \centering
         \includegraphics[width=\columnwidth]{pdf/ex1_l1_n5_mu90.pdf}
         \caption{}
     \end{subfigure} \hfill
-    \begin{subfigure}[t]{0.30\columnwidth}
+    \begin{subfigure}[t]{0.32\columnwidth}
         \centering
         \includegraphics[width=\columnwidth]{pdf/ex1_l1_n5_mu60.pdf}
         \caption{}
     \end{subfigure} \hfill
-    \begin{subfigure}[t]{0.30\columnwidth}
+    \begin{subfigure}[t]{0.32\columnwidth}
         \centering
         \includegraphics[width=\columnwidth]{pdf/ex1_l1_n5_mu30.pdf}
         \caption{}
@@ -61,19 +62,19 @@ smaller oscillation in the bottom of the concave surface. We see that with a
 filter order of 3 the noise floor is between \SI{-24}{\decibel} to
 \SI{-26}{\decibel}. Of course that the next step is to compare this floor in
 regard to the filter order. Figure~\ref{fig:ex1varyorder} shows this.
-\begin{figure}[h]
+\begin{figure}
     \centering
-    \begin{subfigure}[t]{0.30\columnwidth}
+    \begin{subfigure}[t]{0.32\columnwidth}
         \centering
         \includegraphics[width=\columnwidth]{pdf/ex1_l1_n3_mu60.pdf}
         \caption{}
     \end{subfigure} \hfill
-    \begin{subfigure}[t]{0.30\columnwidth}
+    \begin{subfigure}[t]{0.32\columnwidth}
         \centering
         \includegraphics[width=\columnwidth]{pdf/ex1_l1_n5_mu60.pdf}
         \caption{}
     \end{subfigure} \hfill
-    \begin{subfigure}[t]{0.30\columnwidth}
+    \begin{subfigure}[t]{0.32\columnwidth}
         \centering
         \includegraphics[width=\columnwidth]{pdf/ex1_l1_n10_mu60.pdf}
         \caption{}
@@ -95,22 +96,22 @@ the most relevant factor in the sinusoidal regions and that the number of weight
 becomes more important in the other regions.
 \begin{figure}
     \centering
-    \begin{subfigure}[t]{0.30\columnwidth}
+    \begin{subfigure}[t]{0.32\columnwidth}
         \centering
         \includegraphics[width=\columnwidth]{pdf/ex1_l2_n3_mu90.pdf}
         \caption{\label{fig:ex1sig2switch}}
     \end{subfigure} % \hspace{1cm}
-    \begin{subfigure}[t]{0.30\columnwidth}
+    \begin{subfigure}[t]{0.32\columnwidth}
         \centering
         \includegraphics[width=\columnwidth]{pdf/ex1_l2_n3_mu60.pdf}
         \caption{}
     \end{subfigure} \\
-    \begin{subfigure}[t]{0.30\columnwidth}
+    \begin{subfigure}[t]{0.32\columnwidth}
         \centering
         \includegraphics[width=\columnwidth]{pdf/ex1_l2_n5_mu90.pdf}
         \caption{}
     \end{subfigure} % \hspace{1cm}
-    \begin{subfigure}[t]{0.30\columnwidth}
+    \begin{subfigure}[t]{0.32\columnwidth}
         \centering
         \includegraphics[width=\columnwidth]{pdf/ex1_l2_n5_mu60.pdf}
         \caption{}
@@ -120,54 +121,54 @@ becomes more important in the other regions.
 
 The last signal is probably the most interesting one to analyse.
 Figure~\ref{fig:ex1vsig3} depicts the results for this exercise.
-\begin{figure}[h]
+\begin{figure}
     \centering
-    \begin{subfigure}[t]{0.30\columnwidth}
+    \begin{subfigure}[t]{0.32\columnwidth}
         \centering
         \includegraphics[width=\columnwidth]{pdf/ex1_l3_n3_mu90.pdf}
         \caption{}
     \end{subfigure} \hfill
-    \begin{subfigure}[t]{0.30\columnwidth}
+    \begin{subfigure}[t]{0.32\columnwidth}
         \centering
         \includegraphics[width=\columnwidth]{pdf/ex1_l3_n3_mu60.pdf}
         \caption{}
     \end{subfigure} \hfill
-    \begin{subfigure}[t]{0.30\columnwidth}
+    \begin{subfigure}[t]{0.32\columnwidth}
         \centering
         \includegraphics[width=\columnwidth]{pdf/ex1_l3_n3_mu30.pdf}
         \caption{}
     \end{subfigure} \\
-    \begin{subfigure}[t]{0.30\columnwidth}
+    \begin{subfigure}[t]{0.32\columnwidth}
         \centering
         \includegraphics[width=\columnwidth]{pdf/ex1_l3_n5_mu90.pdf}
         \caption{}
     \end{subfigure} \hfill
-    \begin{subfigure}[t]{0.30\columnwidth}
+    \begin{subfigure}[t]{0.32\columnwidth}
         \centering
         \includegraphics[width=\columnwidth]{pdf/ex1_l3_n5_mu60.pdf}
         \caption{}
     \end{subfigure} \hfill
-    \begin{subfigure}[t]{0.30\columnwidth}
+    \begin{subfigure}[t]{0.32\columnwidth}
         \centering
         \includegraphics[width=\columnwidth]{pdf/ex1_l3_n5_mu30.pdf}
         \caption{}
     \end{subfigure} \\
-    \begin{subfigure}[t]{0.30\columnwidth}
+    \begin{subfigure}[t]{0.32\columnwidth}
         \centering
         \includegraphics[width=\columnwidth]{pdf/ex1_l3_n10_mu90.pdf}
         \caption{}
     \end{subfigure} \hfill
-    \begin{subfigure}[t]{0.30\columnwidth}
+    \begin{subfigure}[t]{0.32\columnwidth}
         \centering
         \includegraphics[width=\columnwidth]{pdf/ex1_l3_n10_mu60.pdf}
         \caption{}
     \end{subfigure} \hfill
-    \begin{subfigure}[t]{0.30\columnwidth}
+    \begin{subfigure}[t]{0.32\columnwidth}
         \centering
         \includegraphics[width=\columnwidth]{pdf/ex1_l3_n10_mu30.pdf}
         \caption{\label{fig:ex1vsig3n10mu3}}
     \end{subfigure}
-    \caption{Results for the third signal of exercise . The black dashed lines on
+    \caption{Results for the third signal of exercise. The black dashed lines on
         the second subplot in each figure corresponds to the theoretical weights.
         \label{fig:ex1vsig3}}
 \end{figure}
@@ -187,7 +188,6 @@ particular case of the figure~\label{fig:ex1vsig3n10mu3} for \(n=10\) and
 than in the second part, where \(\mu=0.03\). The effect of an adaptation that is
 too slow becomes clearly visible with the decrease in performance.
 
-\FloatBarrier
 \section{Exercise 2}
 
 In exercise 2, we are to consider three signals:
@@ -258,14 +258,14 @@ for various number of weights and to plot the error as function of this. Results
 for this can be seen in figures~\ref{fig:ex22x1} and~\ref{fig:ex22x2}.
 \begin{figure}
     \centering
-    \begin{minipage}[t]{0.30\columnwidth}
+    \begin{minipage}[t]{0.32\columnwidth}
         \centering
         \includegraphics[width=\columnwidth]{pdf/ex2_pt2_x1_all.pdf}
         \caption{Results for the second part of ex. 2 for \(x_1(t)\)
             \label{fig:ex22x1}}
     \end{minipage}
     \hspace{1cm}
-    \begin{minipage}[t]{0.30\columnwidth}
+    \begin{minipage}[t]{0.32\columnwidth}
         \centering
         \includegraphics[width=\columnwidth]{pdf/ex2_pt2_x2_all.pdf}
         \caption{Results for the second part of ex. 2 for \(x_2(t)\)
@@ -286,7 +286,6 @@ limitations of floating point arithmetic.
 % hand, if we choose as the ROC the external region of the Z-plane the system
 % becomes causal, but at the cost of stability.
 
-\FloatBarrier
 \section{Exercise 3}
 
 In exercise 3, we are asked to use the NMLS algorithm to make an adaptive filter
@@ -295,15 +294,15 @@ The number of iterations and the step were both too low to see the best converge
 possible. The same with the number of weights. I settled on two million iterations
 and \(40\) weights. For the iteration step I did something else: the script adapts
 the weights as iterations go along, as can be seen in line 47 of {\tt
-experiment3.m}. Results can be seen in figure~\ref{fig:ex3res}.
+        experiment3.m}. Results can be seen in figure~\ref{fig:ex3res}.
 \begin{figure}
     \centering
-    \begin{subfigure}[t]{0.30\columnwidth}
+    \begin{subfigure}[t]{0.32\columnwidth}
         \centering
         \includegraphics[width=\columnwidth]{pdf/ex3_x1_all.pdf}
         \caption{Results for \(x_1\).}
     \end{subfigure} \hspace{1cm}
-    \begin{subfigure}[t]{0.30\columnwidth}
+    \begin{subfigure}[t]{0.32\columnwidth}
         \centering
         \includegraphics[width=\columnwidth]{pdf/ex3_x2_all.pdf}
         \caption{Results for \(x_2\).}
@@ -332,6 +331,111 @@ large jitter of these results.
     \caption{Results for the exercise 3.\label{tab:results2}}
 \end{table}
 
+\section{Exercise 4}
+
+In exercise 4, we are asked to create an adaptive filter whose input is:
+\begin{equation}
+    x(t)=\cos(\omega t) + \sigma v(t)
+\end{equation}
+And the target signals are:
+\begin{align}
+    d_1 (t) & = x(t+1)   \\
+    d_2 (t) & = =A(t)\sin(\omega t),\;A(t)=\begin{cases}
+        +2 & t<5000         \\
+        -2 & t\geqslant 5000
+    \end{cases}
+\end{align}
+with \(\omega = 0.2\pi\) and \(\sigma = 0.01\). As per the assignment, I ran the
+tests for \(n=\{1,\ 2,\ 3\}\) and \(\mu=\{0.1,\ 0.8\}\). Results can be seen in
+figures~\ref{fig:ex4d1} and~\ref{fig:ex4d2}.
+\begin{figure}
+    \centering
+    \begin{subfigure}[t]{0.32\columnwidth}
+        \centering
+        \includegraphics[width=\columnwidth]{pdf/results_ex4_d1_n1_mu0.10.pdf}
+        \caption{}
+    \end{subfigure} \hfill
+    \begin{subfigure}[t]{0.32\columnwidth}
+        \centering
+        \includegraphics[width=\columnwidth]{pdf/results_ex4_d1_n2_mu0.10.pdf}
+        \caption{}
+    \end{subfigure} \hfill
+    \begin{subfigure}[t]{0.32\columnwidth}
+        \centering
+        \includegraphics[width=\columnwidth]{pdf/results_ex4_d1_n3_mu0.10.pdf}
+        \caption{}
+    \end{subfigure} \\
+    \begin{subfigure}[t]{0.32\columnwidth}
+        \centering
+        \includegraphics[width=\columnwidth]{pdf/results_ex4_d1_n1_mu0.80.pdf}
+        \caption{}
+    \end{subfigure} \hfill
+    \begin{subfigure}[t]{0.32\columnwidth}
+        \centering
+        \includegraphics[width=\columnwidth]{pdf/results_ex4_d1_n2_mu0.80.pdf}
+        \caption{}
+    \end{subfigure} \hfill
+    \begin{subfigure}[t]{0.32\columnwidth}
+        \centering
+        \includegraphics[width=\columnwidth]{pdf/results_ex4_d1_n3_mu0.80.pdf}
+        \caption{\label{fig:ex4d1n3mu08}}
+    \end{subfigure}
+    \caption{Results for exercise 4, for \(d_1\).\label{fig:ex4d1}}
+\end{figure}
+\begin{figure}
+    \centering
+    \begin{subfigure}[t]{0.32\columnwidth}
+        \centering
+        \includegraphics[width=\columnwidth]{pdf/results_ex4_d2_n1_mu0.10.pdf}
+        \caption{}
+    \end{subfigure} \hfill
+    \begin{subfigure}[t]{0.32\columnwidth}
+        \centering
+        \includegraphics[width=\columnwidth]{pdf/results_ex4_d2_n2_mu0.10.pdf}
+        \caption{}
+    \end{subfigure} \hfill
+    \begin{subfigure}[t]{0.32\columnwidth}
+        \centering
+        \includegraphics[width=\columnwidth]{pdf/results_ex4_d2_n3_mu0.10.pdf}
+        \caption{}
+    \end{subfigure} \\
+    \begin{subfigure}[t]{0.32\columnwidth}
+        \centering
+        \includegraphics[width=\columnwidth]{pdf/results_ex4_d2_n1_mu0.80.pdf}
+        \caption{}
+    \end{subfigure} \hfill
+    \begin{subfigure}[t]{0.32\columnwidth}
+        \centering
+        \includegraphics[width=\columnwidth]{pdf/results_ex4_d2_n2_mu0.80.pdf}
+        \caption{}
+    \end{subfigure} \hfill
+    \begin{subfigure}[t]{0.32\columnwidth}
+        \centering
+        \includegraphics[width=\columnwidth]{pdf/results_ex4_d2_n3_mu0.80.pdf}
+        \caption{\label{fig:ex4d2n3mu08}}
+    \end{subfigure}
+    \caption{Results for exercise 4, for \(d_2\).\label{fig:ex4d2}}
+\end{figure}
+
+Now let's look at these results. For either scenario, only one weight is not
+enough. Between two and three weight there is barely any difference, even though
+for \(n=3\) is slightly better. The filter is indeed able to predict the future
+sample. As it was with the third signal on exercise 1, when \(d_2\) reverses the
+amplitude we see the weights loose ``synchronization'' and then quickly pick up
+again on the signals. I also want to point out the figure~\ref{fig:ex4d1n3mu08}
+where we can see that the error barely changes but the weights keep evolving. This
+might come from the system to be overdetermined. Also, on
+figure~\ref{fig:ex4d2n3mu08} we can see that the adaptation on the second part
+is slightly worse than from the first half. Even on the amplitude plot one can see
+that the filter overcompensates and there is a slight DC shift on the recovered
+signal, that stays below the original signal. I think that in this scenario
+\(\mu\) is to high that any variation of the weights would make the adaptation
+even worse, so this is why they don't change. Basically, the system would never be
+able to fall into a better solution.This shows the importance of taking care into
+using an appropriate adaptation step, and maybe even making this adaptation step
+dynamic, for example, reducing it when the system reaches a steady state, so a
+better solution can be searched for.
+
 \section{Exercise 5}
 
 In exercise 5 we have a new challenge: we don't have a ``target'' signal. This
@@ -350,26 +454,27 @@ constellation does tend to the ``perfect'' one as the algorithm iterates. This i
 an interesting way to visualize what the error evolution says.
 \begin{figure}
     \centering
-    \begin{subfigure}[t]{0.30\columnwidth}
+    \begin{subfigure}[t]{0.32\columnwidth}
         \centering
         \includegraphics[width=\columnwidth]{pdf/ex5_4psk_const.pdf}
         \caption{Constellation evolution.\label{fig:ex5_4psk_const}}
     \end{subfigure} \hspace{1cm}
-    \begin{subfigure}[t]{0.30\columnwidth}
+    \begin{subfigure}[t]{0.32\columnwidth}
         \centering
         \includegraphics[width=\columnwidth]{pdf/ex5_8psk_res.pdf}
         \caption{Weights and error evolution.\label{fig:ex5_4psk_res}}
     \end{subfigure}
     \caption{Results for 4-PSK on exercise 5.\label{fig:ex5_4psk}}
 \end{figure}
+
 \begin{figure}
     \centering
-    \begin{subfigure}[t]{0.30\columnwidth}
+    \begin{subfigure}[t]{0.32\columnwidth}
         \centering
         \includegraphics[width=\columnwidth]{pdf/ex5_8psk_const.pdf}
         \caption{Constellation evolution.\label{fig:ex5_8psk_const}}
     \end{subfigure} \hspace{1cm}
-    \begin{subfigure}[t]{0.30\columnwidth}
+    \begin{subfigure}[t]{0.32\columnwidth}
         \centering
         \includegraphics[width=\columnwidth]{pdf/ex5_8psk_res.pdf}
         \caption{Weights and error evolution.\label{fig:ex5_8psk_res}}
